Metodos de pelicula añadidos, mejoras parciales faltan
