# app/Http/Resources/PeliculaResource.php
@@ -3,9 +3,10 @@
 namespace App\Http\Resources;
 
 use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
 use Illuminate\Http\Resources\Json\ResourceCollection;
 
-class PeliculaResource extends ResourceCollection
+class PeliculaResource extends JsonResource
 {
     /**
      * Transform the resource collection into an array.
@@ -14,6 +15,15 @@ class PeliculaResource extends ResourceCollection
      */
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        return [
+            'id' => $this->id,
+            'nombre' => $this->nombre,
+            'descripcion' => $this->descripcion,
+            'duracion' => $this->duracion,
+            'rutaImagen' => $this->rutaImagen,
+            'rutaLocalImagen' => $this->rutaLocalImagen,
+            'clasificacion' => $this->clasificacion,
+            'categoria_id' => $this->categoria_id,
+        ];
     }
 }
